--- a/whospounding.html
+++ b/whospounding.html
@@ -107,6 +107,13 @@
                     <li>Dana Sebenste</li>
                     <li class="npc__valor">Maggie Taege</li>
                     <li>Kimberly Bugos</li>
+                    <li>Ryan Walsh</li>
+                    <li>Rachel Burke</li>
+                    <li>Rachel Burke Guest</li>
+                    <li>Matt Cavanaugh</li>
+                    <li>Matt Taege</li>
+                    <li>Sara Wilhelm</li>
+                    <li>Lauren Summers</li>
                 </ol>
             </div>
         </div>
