--- a/whospounding.html
+++ b/whospounding.html
@@ -114,6 +114,7 @@
                     <li>Matt Taege</li>
                     <li>Sara Wilhelm</li>
                     <li>Lauren Summers</li>
+                    <li>Tanner Caldwell</li>
                 </ol>
             </div>
         </div>
