--- a/whospounding.html
+++ b/whospounding.html
@@ -115,6 +115,8 @@
                     <li>Sara Wilhelm</li>
                     <li>Lauren Summers</li>
                     <li>Tanner Caldwell</li>
+                    <li>Mia Benberry</li>
+                    <li>Mia Benberry Guest</li>
                 </ol>
             </div>
         </div>
