--- a/whospounding.html
+++ b/whospounding.html
@@ -117,6 +117,7 @@
                     <li>Tanner Caldwell</li>
                     <li>Mia Benberry</li>
                     <li>Mia Benberry Guest</li>
+                    <li>Dave Durdov</li>
                 </ol>
             </div>
         </div>
