--- a/whospounding.html
+++ b/whospounding.html
@@ -118,6 +118,7 @@
                     <li>Mia Benberry</li>
                     <li>Mia Benberry Guest</li>
                     <li>Dave Durdov</li>
+                    <li>Nick Staton</li>
                 </ol>
             </div>
         </div>
