--- a/whospounding.html
+++ b/whospounding.html
@@ -116,7 +116,7 @@
                     <li>Lauren Summers</li>
                     <li>Tanner Caldwell</li>
                     <li>Mia Benberry</li>
-                    <li>Mia Benberry Guest</li>
+                    <li>Jeremy Benberry</li>
                     <li>Dave Durdov</li>
                     <li>Nick Staton</li>
                 </ol>
