--- a/whospounding.html
+++ b/whospounding.html
@@ -119,6 +119,7 @@
                     <li>Jeremy Benberry</li>
                     <li>Dave Durdov</li>
                     <li>Nick Staton</li>
+                    <li>Tom Huguelet</li>
                 </ol>
             </div>
         </div>
