--- a/signup.html
+++ b/signup.html
@@ -49,9 +49,9 @@
         </header>
         <div class="row">
             <div class="small-12 medium-8 columns">
-                <!-- <h3>Registration is now closed.</h3>
-                <p>I have extra shirts available. Email me at matthew.schragal@live.com to claim one. First come first serve.</p>
-                <p>Small: 5, Medium: 8, Large: 10, XL: 1</p> -->
+                <h3>Registration is now closed.</h3>
+                <!-- <p>I have extra shirts available. Email me at matthew.schragal@live.com to claim one. First come first serve.</p>
+                <p>Small: 5, Medium: 8, Large: 10, XL: 1</p>
                 <h3>What Does Registration Get Me?</h3>
                 <p>Most importantly, the official Neighborhood Pub Crawl T-Shirt. These puppies are limited edition, custom designed, soft as hell, and built for comfort. Coveted stuff. As always, the artwork will remain secret until crawl day.</p>
                 <p>In addition to that, you get food during our stop at Three Counties. Papa Joe's Pizza, a neighborhood favorite, provides their legendary pie for our mouths.</p>
@@ -63,10 +63,10 @@
                 <p><strong>The cost of registration is $35</strong>. Well worth it for the souvenir and experience of a lifetime.</p>
                 <p>Registration can be completed via <strong>Venmo</strong> or <strong>PayPal</strong>.</p>
                 <h4>Why So Early?</h4>
-                <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p>
+                <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p> -->
             </div>
             <div class="small-12 medium-4 columns">
-                <h4>Register by August 15th, 2022</h4>
+<!--                 <h4>Register by August 15th, 2022</h4>
                 <p><strong>Registration can only be done in advance.</strong> <strong>Shirts will not be sold on crawl day.</strong></p>
                 <p>You Can Pay via Venmo or PayPal. Venmo is preferred.</p>
                 <div class="method">
@@ -79,7 +79,6 @@
                 <div class="modifier">
                     <select name="size">
                         <option value="Select a Size">-Shirt Size-</option>
-                        <!-- <option value="XS">Extra Small (if available)</option> -->
                         <option value="S">Small</option>
                         <option value="M">Medium</option>
                         <option value="L">Large</option>
@@ -100,7 +99,7 @@
                     <a class="payment-button payment-button--paypal" href="https://www.paypal.com/paypalme/schrags08/35" target="_blank" title="Pay via PayPal">
                         <img src="assets/img/paypal_logo.png" alt="Pay via PayPal">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
         
