--- a/whospounding.html
+++ b/whospounding.html
@@ -120,6 +120,7 @@
                     <li>Dave Durdov</li>
                     <li>Nick Staton</li>
                     <li>Tom Huguelet</li>
+                    <li>Kevin Coyne</li>
                 </ol>
             </div>
         </div>
