--- a/whospounding.html
+++ b/whospounding.html
@@ -121,6 +121,8 @@
                     <li>Nick Staton</li>
                     <li>Tom Huguelet</li>
                     <li>Kevin Coyne</li>
+                    <li>Katy Shoevlin</li>
+                    <li>Mikey Shoevlin</li>
                 </ol>
             </div>
         </div>
