--- a/whospounding.html
+++ b/whospounding.html
@@ -123,6 +123,8 @@
                     <li>Kevin Coyne</li>
                     <li>Katy Shoevlin</li>
                     <li>Mikey Shoevlin</li>
+                    <li>Ashley Thompson</li>
+                    <li>Sean Galiotto</li>
                 </ol>
             </div>
         </div>
