--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                 <div class="small-12 columns">
                     <nav class="npc__navMain">
                         <ul class="menu vertical medium-horizontal">
-                            <li ><a href="/history.html">History</a></li>
-                            <li ><a href="/bars.html">The Bars</a></li>
-                            <li ><a href="/signup.html">Sign Up</a></li>
-                            <li ><a href="/whospounding.html">Who's Pounding?</a></li>
+                            <li><a href="/history.html">History</a></li>
+                            <li><a href="/bars.html">The Bars</a></li>
+                            <li><a href="/signup.html">Sign Up</a></li>
+                            <li><a href="/whospounding.html">Who's Pounding?</a></li>
+                            <li><a href="/info.html">Info</a></li>
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
