--- a/whospounding.html
+++ b/whospounding.html
@@ -125,6 +125,7 @@
                     <li>Mikey Shoevlin</li>
                     <li>Ashley Thompson</li>
                     <li>Sean Galiotto</li>
+                    <li>Elyse Fuller</li>
                 </ol>
             </div>
         </div>
