--- a/info.html
+++ b/info.html
@@ -61,7 +61,7 @@
                 <p>Here's how things will go down on Saturday the 10th.</p>
 
                 <p>PLEASE read all the way to the end as there is some very important information down there. A good
-                    crawler is an informed crawler. Don't blow it. The serpent of eternity lurks.</p>
+                    crawler is an informed crawler. Don't blow it.</p>
 
                 <p>I don't have everyone's email address so be sure to check with your buddies and make sure they're in
                     the
