--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,7 @@
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li class="selected"><a href="/signup.html">Sign Up</a></li>
                             <li ><a href="/whospounding.html">Who's Pounding?</a></li>
+                            <li><a href="/info.html">Day Of</a></li>
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
