--- a/whospounding.html
+++ b/whospounding.html
@@ -38,8 +38,8 @@
                             <li ><a href="/history.html">History</a></li>
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
-                            <li class="selected"><a href="/whospounding.html">Who's Pounding?</a></li>
-                            <li><a href="/info.html">Day Of</a></li>
+<!--                             <li class="selected"><a href="/whospounding.html">Who's Pounding?</a></li>
+                            <li><a href="/info.html">Day Of</a></li> -->
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
@@ -50,84 +50,7 @@
         </header>
         <div class="row">
             <div class="small-12 columns">
-                <h3>Registered Crawlers</h3>
-                <ol>
-                    <li>Matt Schragal</li>
-                    <li>Lucy Raymond</li>
-                    <li class="npc__valor">Billy Gavin</li>
-                    <li>Haley Turner</li>
-                    <li>Tony Maguire</li>
-                    <li>Joy Kolb</li>
-                    <li class="npc__valor">Pat Cavanaugh</li>
-                    <li>Denis Walsh</li>
-                    <li>Duygu Dabit</li>
-                    <li>Tony Dabit</li>
-                    <li class="npc__valor">Tim Redmond</li>
-                    <li>Dan Collins</li>
-                    <li>Dan Klimas</li>
-                    <li>Emily Anderson</li>
-                    <li>Luke Anderson</li>
-                    <li>Jimmy Webber</li>
-                    <li class="npc__valor">Jacob Nelson</li>
-                    <li>Ray Clark</li>
-                    <li>Kristy Johnson</li>
-                    <li>Mike Johnson</li>
-                    <li>Joy Rinehart</li>
-                    <li>Joy Rinehart Guest</li>
-                    <li class="npc__valor">Carrie North</li>
-                    <li>Molly Gavin</li>
-                    <li>Tim Gavin</li>
-                    <li class="npc__valor">Dave Weber</li>
-                    <li>Fiona Weber</li>
-                    <li>Melissa Gillham</li>
-                    <li>Brian Gillham</li>
-                    <li class="npc__valor">Stacey Grodek</li>
-                    <li>Tim Grodek</li>
-                    <li>Chantel Dunham</li>
-                    <li>Neil Ghosh</li>
-                    <li class="npc__valor">Matt McDonald</li>
-                    <li>Kaitlyn Hoffman</li>
-                    <li>Amanda Pantle</li>
-                    <li>Tim Ebrom</li>
-                    <li class="npc__valor">Adam Moore</li>
-                    <li>Adria Stapleton</li>
-                    <li>Adria Stapleton Guest</li>
-                    <li>Steve DiDuca</li>
-                    <li>Kert Evans</li>
-                    <li>Kert Evans Guest (Andrea)</li>
-                    <li>Trudy Schragal</li>
-                    <li>Samantha Wagner</li>
-                    <li>Brian DiDuca</li>
-                    <li>Lindsay Lebica</li>
-                    <li>Jason Mielcarek</li>
-                    <li>Elizabeth Adamowski</li>
-                    <li>Lisa DiDuca</li>
-                    <li class="npc__valor">Craig Fitzgerald</li>
-                    <li>Kelly Fitzgerald</li>
-                    <li>Colleen Moran</li>
-                    <li>Dana Sebenste</li>
-                    <li class="npc__valor">Maggie Taege</li>
-                    <li>Kimberly Bugos</li>
-                    <li>Ryan Walsh</li>
-                    <li>Rachel Burke</li>
-                    <li>Rachel Burke Guest</li>
-                    <li>Matt Cavanaugh</li>
-                    <li>Matt Taege</li>
-                    <li>Sara Wilhelm</li>
-                    <li>Lauren Summers</li>
-                    <li>Tanner Caldwell</li>
-                    <li>Mia Benberry</li>
-                    <li>Jeremy Benberry</li>
-                    <li>Dave Durdov</li>
-                    <li>Nick Staton</li>
-                    <li>Tom Huguelet</li>
-                    <li>Kevin Coyne</li>
-                    <li>Katy Shoevlin</li>
-                    <li>Mikey Shoevlin</li>
-                    <li>Ashley Thompson</li>
-                    <li>Sean Galiotto</li>
-                    <li>Elyse Fuller</li>
-                </ol>
+<!--                 placeholder -->
             </div>
         </div>
         
