--- a/whospounding.html
+++ b/whospounding.html
@@ -53,6 +53,8 @@
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
+                    <li>Timothy James</li>
+                    <li>Aaron Kohlhepp</li>
                 </ol>
             </div>
         </div>
