--- a/whospounding.html
+++ b/whospounding.html
@@ -55,6 +55,9 @@
                     <li>Lucy Raymond</li>
                     <li>Timothy James</li>
                     <li>Aaron Kohlhepp</li>
+                    <li>Denis Walsh</li>
+                    <li>Joy Kolb</li>
+                    <li>Tony Maguire</li>
                 </ol>
             </div>
         </div>
