--- a/whospounding.html
+++ b/whospounding.html
@@ -58,6 +58,8 @@
                     <li>Denis Walsh</li>
                     <li>Joy Kolb</li>
                     <li>Tony Maguire</li>
+                    <li class="npc__valor">Tim Grodek</li>
+                    <li class="npc__valor">Stacey Grodek</li>
                 </ol>
             </div>
         </div>
