--- a/whospounding.html
+++ b/whospounding.html
@@ -60,6 +60,8 @@
                     <li>Tony Maguire</li>
                     <li class="npc__valor">Tim Grodek</li>
                     <li class="npc__valor">Stacey Grodek</li>
+                    <li>Fiona Weber</li>
+                    <li class="npc__valor">Dave Weber</li>
                 </ol>
             </div>
         </div>
