--- a/whospounding.html
+++ b/whospounding.html
@@ -62,6 +62,8 @@
                     <li class="npc__valor">Stacey Grodek</li>
                     <li>Fiona Weber</li>
                     <li class="npc__valor">Dave Weber</li>
+                    <li>Emily Anderson</li>
+                    <li>Luke Anderson</li>
                 </ol>
             </div>
         </div>
