--- a/whospounding.html
+++ b/whospounding.html
@@ -64,6 +64,7 @@
                     <li class="npc__valor">Dave Weber</li>
                     <li>Emily Anderson</li>
                     <li>Luke Anderson</li>
+                    <li>Lindsay Lebica</li>
                 </ol>
             </div>
         </div>
