--- a/whospounding.html
+++ b/whospounding.html
@@ -65,6 +65,10 @@
                     <li>Emily Anderson</li>
                     <li>Luke Anderson</li>
                     <li>Lindsay Lebica</li>
+                    <li>Kristy Johnson</li>
+                    <li>Michael Johnson</li>
+                    <li>Joy Rinehart</li>
+                    <li>Joy Rinehart Guest</li>
                 </ol>
             </div>
         </div>
