--- a/whospounding.html
+++ b/whospounding.html
@@ -69,6 +69,7 @@
                     <li>Michael Johnson</li>
                     <li>Joy Rinehart</li>
                     <li>Joy Rinehart Guest</li>
+                    <li>Chantel Dunham Ghosh</li>
                 </ol>
             </div>
         </div>
