--- a/whospounding.html
+++ b/whospounding.html
@@ -70,6 +70,8 @@
                     <li>Joy Rinehart</li>
                     <li>Joy Rinehart Guest</li>
                     <li>Chantel Dunham Ghosh</li>
+                    <li>Kert Evans</li>
+                    <li>Andrea Evans</li>
                 </ol>
             </div>
         </div>
