--- a/whospounding.html
+++ b/whospounding.html
@@ -72,6 +72,8 @@
                     <li>Chantel Dunham Ghosh</li>
                     <li>Kert Evans</li>
                     <li>Andrea Evans</li>
+                    <li>Adria Stapleton</li>
+                    <li>Jake Stapleton</li>
                 </ol>
             </div>
         </div>
