--- a/whospounding.html
+++ b/whospounding.html
@@ -53,7 +53,7 @@
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
-                    <li>Timothy James</li>
+                    <li class="npc__valor">Timothy Redmond</li>
                     <li>Aaron Kohlhepp</li>
                     <li>Denis Walsh</li>
                     <li>Joy Kolb</li>
@@ -74,6 +74,10 @@
                     <li>Andrea Evans</li>
                     <li>Adria Stapleton</li>
                     <li>Jake Stapleton</li>
+                    <li>Pantle Amanda</li>
+                    <li>Tim Ebrom</li>
+                    <li>Lisa DiDuca</li>
+                    <li>Steve DiDuca</li>
                 </ol>
             </div>
         </div>
