--- a/whospounding.html
+++ b/whospounding.html
@@ -78,6 +78,8 @@
                     <li>Tim Ebrom</li>
                     <li>Lisa DiDuca</li>
                     <li>Steve DiDuca</li>
+                    <li class="npc__valor">Matt Artz</li>
+                    <li>Jason Mielcarek</li>
                 </ol>
             </div>
         </div>
