--- a/whospounding.html
+++ b/whospounding.html
@@ -74,7 +74,7 @@
                     <li>Andrea Evans</li>
                     <li>Adria Stapleton</li>
                     <li>Jake Stapleton</li>
-                    <li>Pantle Amanda</li>
+                    <li>Amanda Pantle</li>
                     <li>Tim Ebrom</li>
                     <li>Lisa DiDuca</li>
                     <li>Steve DiDuca</li>
