--- a/whospounding.html
+++ b/whospounding.html
@@ -80,6 +80,8 @@
                     <li>Steve DiDuca</li>
                     <li class="npc__valor">Matt Artz</li>
                     <li>Jason Mielcarek</li>
+                    <li class="npc__valor">Maggie Taege</li>
+                    <li>Matt Taege</li>
                 </ol>
             </div>
         </div>
