--- a/whospounding.html
+++ b/whospounding.html
@@ -82,6 +82,8 @@
                     <li>Jason Mielcarek</li>
                     <li class="npc__valor">Maggie Taege</li>
                     <li>Matt Taege</li>
+                    <li class="npc__valor">Jacob Nelson</li>
+                    <li>Lauren Summers</li>
                 </ol>
             </div>
         </div>
