--- a/whospounding.html
+++ b/whospounding.html
@@ -84,6 +84,7 @@
                     <li>Matt Taege</li>
                     <li class="npc__valor">Jacob Nelson</li>
                     <li>Lauren Summers</li>
+                    <li>Katy Shoevlin</li>
                 </ol>
             </div>
         </div>
