--- a/whospounding.html
+++ b/whospounding.html
@@ -85,6 +85,11 @@
                     <li class="npc__valor">Jacob Nelson</li>
                     <li>Lauren Summers</li>
                     <li>Katy Shoevlin</li>
+                    <li>Molly Warner Gavin</li>
+                    <li>Tim Gavin</li>
+                    <li>Elizabeth Adamowski</li>
+                    <li>Ella Roland</li>
+                    <li>Brian DiDuca</li>
                 </ol>
             </div>
         </div>
