--- a/whospounding.html
+++ b/whospounding.html
@@ -90,6 +90,8 @@
                     <li>Elizabeth Adamowski</li>
                     <li>Ella Roland</li>
                     <li>Brian DiDuca</li>
+                    <li>Rachel Burke-Moorman</li>
+                    <li>Russell Moorman</li>
                 </ol>
             </div>
         </div>
