--- a/whospounding.html
+++ b/whospounding.html
@@ -92,6 +92,8 @@
                     <li>Brian DiDuca</li>
                     <li>Rachel Burke-Moorman</li>
                     <li>Russell Moorman</li>
+                    <li>Melissa Gillham</li>
+                    <li>Brian Gillham</li>
                 </ol>
             </div>
         </div>
