--- a/whospounding.html
+++ b/whospounding.html
@@ -94,6 +94,7 @@
                     <li>Russell Moorman</li>
                     <li>Melissa Gillham</li>
                     <li>Brian Gillham</li>
+                    <li>Dana Sebenste</li>
                 </ol>
             </div>
         </div>
