--- a/whospounding.html
+++ b/whospounding.html
@@ -95,6 +95,8 @@
                     <li>Melissa Gillham</li>
                     <li>Brian Gillham</li>
                     <li>Dana Sebenste</li>
+                    <li>Kevin Coyne</li>
+                    <li>Janine Bobko</li>
                 </ol>
             </div>
         </div>
