--- a/whospounding.html
+++ b/whospounding.html
@@ -97,6 +97,10 @@
                     <li>Dana Sebenste</li>
                     <li>Kevin Coyne</li>
                     <li>Janine Bobko</li>
+                    <li class="npc__valor">Billy Gavin</li>
+                    <li>Meghan Gabler</li>
+                    <li>Mike Gabler</li>
+                    <li>Ray Clark</li>
                 </ol>
             </div>
         </div>
