--- a/whospounding.html
+++ b/whospounding.html
@@ -101,6 +101,7 @@
                     <li>Meghan Gabler</li>
                     <li>Mike Gabler</li>
                     <li>Ray Clark</li>
+                    <li>Matt Cavanaugh</li>
                 </ol>
             </div>
         </div>
