--- a/whospounding.html
+++ b/whospounding.html
@@ -102,6 +102,10 @@
                     <li>Mike Gabler</li>
                     <li>Ray Clark</li>
                     <li>Matt Cavanaugh</li>
+                    <li>Daniel Everhart</li>
+                    <li>Mia Benberry</li>
+                    <li>Jeremy Benberry</li>
+                    <li>Colleen Moran</li>
                 </ol>
             </div>
         </div>
