--- a/whospounding.html
+++ b/whospounding.html
@@ -106,6 +106,7 @@
                     <li>Mia Benberry</li>
                     <li>Jeremy Benberry</li>
                     <li>Colleen Moran</li>
+                    <li>Matt McDonald</li>
                 </ol>
             </div>
         </div>
