--- a/whospounding.html
+++ b/whospounding.html
@@ -106,7 +106,8 @@
                     <li>Mia Benberry</li>
                     <li>Jeremy Benberry</li>
                     <li>Colleen Moran</li>
-                    <li>Matt McDonald</li>
+                    <li class="npc__valor">Matt McDonald</li>
+                    <li>Lovell Chandier</li>
                 </ol>
             </div>
         </div>
