--- a/whospounding.html
+++ b/whospounding.html
@@ -108,6 +108,8 @@
                     <li>Colleen Moran</li>
                     <li class="npc__valor">Matt McDonald</li>
                     <li>Lovell Chandier</li>
+                    <li>Laura Staton</li>
+                    <li>Lisa Roberts</li>
                 </ol>
             </div>
         </div>
