--- a/whospounding.html
+++ b/whospounding.html
@@ -110,6 +110,7 @@
                     <li>Lovell Chandier</li>
                     <li>Laura Staton</li>
                     <li>Lisa Roberts</li>
+                    <li>Mihai Sturdza</li>
                 </ol>
             </div>
         </div>
