--- a/info.html
+++ b/info.html
@@ -50,7 +50,71 @@
         <div class="row">
             <div class="small-12 columns">
                 <h3>Day of Information</h3>
-                
+                Here's how things will go down on Saturday...
+
+I met with all the bars and they are excited for us to come, they know me and that we always have a good group of people. Please be respectful of the bars and the surrounding neighborhoods. It's appreciated by all. Keep it classy.
+
+Here's the tentative schedule:
+
+<p>1:00pm - 2:00pm - Mary's Place Welcome Picnic (OPTIONAL)<br>
+2:00pm - 3:45pm - Mary's Place<br>
+3:50pm - 4:35pm - Filonek's<br>
+4:40pm - 5:25pm - The Garage<br>
+5:30pm - 6:40pm - Jet's<br>
+6:50pm - 10:05pm - Three Counties (pizza, live music, dance party, chalice presentation)</p>
+
+I have extra shirts available if you have some friends that still want to join. $35, first come first serve. Email me.
+
+<p>Small: 3<br>
+Medium: 2<br>
+Large: 6<br>
+XL: 6</p>
+
+=============================================================
+
+General Info:
+
+2:00 PM -- The PUB CRAWL BEGINS at Mary's Place.
+
+Mary's serves as the center for t-shirt distribution and marks the beginning of our journey.
+
+Please show up if you want your t-shirt. I'm not bringing the backpack of unclaimed shirts out this year because it sucks and I like to enjoy the crawl too. If you ordered one, show up to get it. The shirts are a big part of NPC tradition, please respect that.
+
+Mary's Place also hosts our world famous Golden Ticket raffle. The drawing begins after the arrival of our 30th patron. Winner claims $100 cash. Come enjoy the friendly confines of Mary's backyard.
+
+<p>Mary's Place<br>
+6300 N Milwaukee Ave</p>
+
+=============================================================
+
+Food (around 7:00 PM):
+
+We will be filling up with Papa Joe's Pizza during our stop at The Three Counties. Papa Joe's is a neighborhood favorite and never disappoints.  It's a big hit on the crawl and I've received many excellent reviews. Feeding time.
+
+Entertainment (around 7:45 PM):
+
+Unfortunately, our band, Hold Out Your Hand I've Made Something For You (HOYHIMSFY) is finishing up the third leg of their Arctic tour and won't be able to join us this year.
+
+Fortunately, I was able to book the legendary Irish folk singer and county Mayo hero, Bobby Sandwiches. He'll serenade us at the Three Counties. Standing room only.
+
+Dance Party (around 9:00 PM):
+
+The one, the only. Don't miss it. Experience human contact!
+
+The dance party starts around 9:00 PM.
+
+=============================================================
+
+Open Bags \\ Jumbo Jenga \\ Welcome Picnic:
+
+1:00 PM (optional)
+
+Mary's Place hosts our Welcome Picnic on their patio around 1pm.  They roll out the red carpet and usually grill up some dogs for us.
+
+We decided to retire the formal bags tournament a few years ago. That being said, we know there are still some players in the field that would like to throw some flapjacks. We'll have the boxes out. Come challenge the greats. Gambling optional. All are welcome.  
+
+In addition to the raffle and bags, we'll also have some Jumbo Jenga going. Test your skills! Talk to people in real life!
+
             </div>
         </div>
     </div>
