--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,7 +28,7 @@ title: Home
                 </p>
             </div>
             <div class="small-12 medium-6 columns {{ global.cssPrefix }}__feature">
-                <h2>Mailing List?</h2>
+                <h2>Join Mailing List?</h2>
                 <div class="{{ global.cssPrefix }}__updates-form">
                     <input type="text" placeholder="Name" name="name">
                     <input type="text" placeholder="Email" name="email">
