--- a/bars.html
+++ b/bars.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">19th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">September 9th, 2023</span>
+                        <span class="npc__annual">20th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">September 7th, 2024</span>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,6 @@
                             <li class="selected"><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
                             <li ><a href="/whospounding.html">Who's Pounding?</a></li>
-                            <li ><a href="/info.html">Day of Info</a></li>
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
@@ -62,7 +61,7 @@
                         <div class="row npc__bar-info">
                             <div class="small-9 columns">
                                 <div class="npc__bar-description">
-                                    <p>Mary's Place is the staging area and starting point on our journey and few would have it any other way. Hosting the annual bags tournament and boasting ice cold, dirt cheap Old Style bottles, snacks, scenic mural covered walls, a cozy &quot;gaming&quot; area, a spacious, yet picturesque beer garden, and the friendliest of staff, Mary's little slice of heaven is sure to leave you begging the timekeeper for a few extra minutes right out of the gate.</p><p><span class="activities">Activities</span>: early bird bags tournament, outdoor patio, meet and greet, jumbo jenga, hot dogs, t-shirt pickup, golden ticket raffle, group photo</p>
+                                    <p>Mary's Place is the staging area and starting point on our journey. Few would have it any other way. Hosting our welcome picnic and boasting dirt cheap bottles, snacks, mural covered walls, a cozy &quot;gaming&quot; area, a picturesque beer garden, and the friendliest of staff, Mary's little slice of heaven is sure to leave you begging the timekeeper for a few extra minutes right out of the gate.</p><p><span class="activities">Activities</span>: early bird bags, outdoor patio, meet and greet, jumbo jenga, hot dogs, t-shirt pickup, golden ticket raffle, group photo</p>
                                 </div>
                             </div>
                             <div class="small-3 columns npc__img-sidebar">
@@ -84,7 +83,7 @@
                         <div class="row npc__bar-info">
                             <div class="small-9 columns">
                                 <div class="npc__bar-description">
-                                    <p>Recently renovated with large, garage style front windows Filonek's might surprise even the most veteran of crawlers.  With boxed wines, arcade machines, Okocim by the barrel, outdoor seating, and a former Bartender of the Month, this neighborhood sleeper goes straight to the head of the class for those crawlers of Polish descent. You'll want to belly on up to the bar, as it's a preferred parking area for all those down with the white eagle.</p><p><span class="activities">Activities</span>: pool, arcade style gaming, outdoor patio</p>
+                                    <p>Recently renovated with large, garage style front windows Filonek's might surprise even the most veteran of crawlers.  With boxed wines, arcade machines, Okocim by the barrel, outdoor seating, and a former Bartender of the Month, this neighborhood sleeper goes straight to the head of the class for those crawlers of Polish descent. You'll want to belly on up to the bar, as it's a preferred parking area for all those soaring with the white eagle.</p><p><span class="activities">Activities</span>: pool, arcade style gaming, outdoor patio</p>
                                 </div>
                             </div>
                             <div class="small-3 columns npc__img-sidebar">
@@ -106,7 +105,7 @@
                         <div class="row npc__bar-info">
                             <div class="small-9 columns">
                                 <div class="npc__bar-description">
-                                    <p>Owned and operated by Norwood Park residents, the Garage opened in 2011 with a friendly welcome from the neighborhood. Patrons can enjoy a game of shuffleboard, traditional darts, or their deep beer selection. Their Vegas style rooftop deck seats 50; has a 70 inch TV and has a designated smoking section for any puffers out there. Who's pounding?</p><p><span class="activities">Activities</span>: shuffleboard, darts, smoking, root beer beer, 120 minute, rooftop action</p>
+                                    <p>The Garage opened in 2011 with a friendly welcome from the neighborhood. Patrons can enjoy some tasty apps and their deep beer selection. Their Vegas style rooftop deck seats 50. Who's pounding?</p><p><span class="activities">Activities</span>: apps, multiple levels</p>
                                 </div>
                             </div>
                             <div class="small-3 columns npc__img-sidebar">
@@ -128,7 +127,7 @@
                         <div class="row npc__bar-info">
                             <div class="small-9 columns">
                                 <div class="npc__bar-description">
-                                    <p>Formerly the site of Wally's, Jet's is a favorite with the neighborhood youngsters, and offers up some decent pub grub. You'll want to hold your appetite for our next stop as our food there is paid for, however, must you indulge, try the tots. Grab a board game from the back and enjoy some good times with your friends. If you get the chance, I'd recommend a game of Taboo with Cheesy.</p><p><span class="activities">Activities</span>: competitive board gaming, jukebox, sports on tv, darts</p>
+                                    <p>Formerly the site of Wally's, Jet's is a favorite with the neighborhood youngsters and offers up some decent pub grub. You'll want to hold your appetite for our next stop as our food there is paid for, however, must you indulge, try the tots. Grab a board game from the back and enjoy some good times with your friends. If you get the chance, I'd recommend a game of Taboo with Cheesy.</p><p><span class="activities">Activities</span>: competitive board gaming, jukebox, sports on tv, darts</p>
                                 </div>
                             </div>
                             <div class="small-3 columns npc__img-sidebar">
@@ -150,7 +149,7 @@
                         <div class="row npc__bar-info">
                             <div class="small-9 columns">
                                 <div class="npc__bar-description">
-                                    <p>A fan favorite and host like no other. Opening their loving arms to our annual H.O.Y.H.I.M.S.F.Y. jam, this authentic Irish gem pours a dynamite pint of the black stuff. Throw some darts, peruse the jukebox, enjoy the beer garden, and chat up the friendly staff about anything Irish. Top Notch. Formerly Snuggles Pub...oh man, if these walls could talk!</p><p><span class="activities">Activities</span>: rock, H.O.Y.H.I.M.S.F.Y., outdoor patio, pizza</p>
+                                    <p>A fan favorite and host like no other. This authentic Irish gem not only pours a dynamite pint of the black stuff, but opens their loving arms to our annual H.O.Y.H.I.M.S.F.Y. jam and dance party. Eat some pizza, explore the beer garden, enjoy the show, and chat up the friendly staff about anything Irish. Top Notch. Formerly Snuggles Pub...oh man, if these walls could talk!</p><p><span class="activities">Activities</span>: rock, H.O.Y.H.I.M.S.F.Y., outdoor patio, pizza, chalice presentation, dancing, craic</p>
                                 </div>
                             </div>
                             <div class="small-3 columns npc__img-sidebar">
