--- a/history.html
+++ b/history.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">19th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">September 9th, 2023</span>
+                        <span class="npc__annual">20th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">September 7th, 2024</span>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,6 @@
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
                             <li ><a href="/whospounding.html">Who's Pounding?</a></li>
-                            <li ><a href="/info.html">Day of Info</a></li>
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
@@ -53,7 +52,7 @@
                 <h3>Pub Crawl History</h3>
                 <p>It began in 2003 as a small journey among close friends and has blossomed over the years to become the defining event of the summer.</p>
                 <p>The Neighborhood Pub Crawl features two zip codes of one of a kind destinations. We've got limited edition custom t-shirts, gaming, food, a house band, raffles, romance, marriages, babies, a dance party, Captain Fun, the Chalice of Valor...you get the point.</p>
-                <p>The core mission of our journey is bringing good people together into the historic melting pot that is Milwaukee Avenue and Chicago's Northwest side. We honor this legendary artery with our pilgrimage every August.</p>
+                <p>The core mission of our journey is bringing good people together into the historic melting pot that is Milwaukee Avenue and Chicago's Northwest side. We honor this legendary artery with our pilgrimage every summer.</p>
                 <p>Our quest offers a chance for friends old and new to unwind, connect, share a Żywiec, and re-discover why they actually became friends in the first place.</p>
                 <p>The Neighborhood is always evolving as is our format. Come one, come all. Invite your friends, invite your friend's friends - invite a total stranger. All are welcome. The people are what make this event great. We look forward to seeing who comes out every year.</p>
                 <p>Thank you,
@@ -63,7 +62,7 @@
                 <img class="npc__foundingFathers" src="assets/img/founding-fathers.png" alt="The Founding Fathers" title="The Founding Fathers" />
             </div>
         </div>
-        
+
     </div>
     <script src="assets/js/app.js"></script>
   </body>
