--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">19th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">September 9th, 2023</span>
+                        <span class="npc__annual">20th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">September 7th, 2024</span>
                     </div>
                 </div>
             </div>
@@ -39,11 +39,7 @@
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
                             <li ><a href="/whospounding.html">Who's Pounding?</a></li>
-                            <li ><a href="/info.html">Day of Info</a></li>
-                            <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
-                                <div class="npc__cheesySurprise"></div>
-                            </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -192,7 +188,7 @@
                 <div class="row">
                     <div class="small-12 medium-6 columns npc__feature">
                         <h2>When?</h2>
-                        <h3>09/09/2023 2:00 PM</h3>
+                        <h3>09/07/2024 2:00 PM</h3>
                     </div>
                     <div class="small-12 medium-6 columns npc__feature">
                         <h2>Where?</h2>
@@ -209,14 +205,14 @@
                         </p>
                     </div>
                     <div class="small-12 medium-6 columns npc__feature">
-                        <h2>Mailing List?</h2>
+                        <h2>Join Mailing List?</h2>
                         <div class="npc__updates-form">
                             <input type="text" placeholder="Name" name="name">
                             <input type="text" placeholder="Email" name="email">
                             <button type="button" class="button" name="signup">Submit</button>
                         </div>
                         <div class="npc__updates-message callout" style="display: none;">
-        
+
                         </div>
                     </div>
                 </div>
@@ -225,11 +221,11 @@
         <script type="text/javascript">
             window.schrags = Object.assign(window.schrags || {}, {
                 "global": {
-                    "eventDate": "September 9, 2023 14:00:00"
+                    "eventDate": "September 7, 2024 14:00:00"
                 }
             });
         </script>
-        
+
     </div>
     <script src="assets/js/app.js"></script>
   </body>
