--- a/whospounding.html
+++ b/whospounding.html
@@ -53,6 +53,9 @@
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
+                    <li class="npc__valor">Tim Redmond</li>
+                    <li>Stephanie Nimmo</li>
+                    <li>Bob Nimmo</li>
                 </ol>
             </div>
         </div>
