--- a/whospounding.html
+++ b/whospounding.html
@@ -39,10 +39,7 @@
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
                             <li class="selected"><a href="/whospounding.html">Who's Pounding?</a></li>
-                            <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
-                                <div class="npc__cheesySurprise"></div>
-                            </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -56,6 +53,7 @@
                     <li class="npc__valor">Tim Redmond</li>
                     <li>Stephanie Nimmo</li>
                     <li>Bob Nimmo</li>
+                    <li>Aaron Kohlhepp</li>
                 </ol>
             </div>
         </div>
